[package]
name = "bem"
version = "0.1.0"
edition = "2021"
description = "Parser for the BEM file format (Block, Element, Modifier)"
readme = "README.md"
keywords = ["bem", "parser", "pest"]
categories = ["parsing"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.2"
pest_derive = "2.7.2"
pest_consume = "1.1.3"
