[package]
name = "bem"
version = "0.1.1"
authors = ["vortex.design"]
edition = "2021"
description = "Parser for the BEM file format (Block, Element, Modifier)"
documentation = "https://docs.rs/bem/latest/bem/"
homepage = "http://vortex.design"
repository = "https://github.com/vortex-design/bem"
readme = "README.md"
keywords = ["bem", "parser", "pest"]
categories = ["parsing", "command-line-utilities"]
license = "MIT"
include = [
	"Cargo.toml",
	"grammar/*",
	"**/*.md",
	"**/*.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
pest = "2.7.2"
pest_derive = "2.7.2"
pest_consume = "1.1.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_derive = "1.0.183"

[dev-dependencies]
insta = "1.31.0"

[[bin]]
name = "bem"
path = "src/main.rs"
